--- a/portfolio/pom.xml
+++ b/portfolio/pom.xml
@@ -34,10 +34,6 @@
 			<optional>true</optional>
 		</dependency>
 		<dependency>
-            <groupId>jakarta.persistence</groupId>
-            <artifactId>jakarta.persistence-api</artifactId>
-        </dependency>
-		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
@@ -70,7 +66,7 @@
 			<version>2.3.0</version>
 		</dependency>
 
-	</dependencies>
+	</dependencies>|
 
 	<build>
 		<plugins>
